--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             </div>
 
             <div class="not-found">
-                <img src="404.png" >
+                <img src="images/404.png" >
                 <p>OOps! Invalid Location :/</p>
             </div>
 
