--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
             <div class="not-found">
                 <img src="images/404.png" >
-                <p>OOps! Invalid Location :/</p>
+                <p>OOps! Invalid Location</p>
             </div>
 
             <div class="weather-box">
